# harmony-tools

./: .gitignore  .lintstagedrc.cjs  CHANGELOG.md  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  publish.yml
docs/: hdc-shell-cmd.md
src/: App.vue  style.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  RELEASE_NOTE.md  build.rs  tauri.conf.json  tauri.conf.macos.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: libusb_shared.dylib-aarch64-apple-darwin  libusb_shared.dylib-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Alert.vue  Choose.vue  Header.vue  Loading.vue  Spinner.vue  Status.vue  Table.vue  TableHeader.vue
src/state/: alert.ts  loading.ts  theme.ts
src/utils/: hdc.ts  keys.ts  symbol.ts  updater.ts
