[package]
name = "harmony-tools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "harmony_tools_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.0.0-rc.0"

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-persisted-scope = "2.0.0-rc.3"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc.1"
tauri-plugin-process = "2.0.0-rc.0"
